# opencv_misis_course

./: CMakeLists.txt
prj.labs/: Makefile  cmake_install.cmake
prj.labs/lab01/: lab01.cpp  lab01.report.md  lab01.report.md.in.txt  Братчиков_Сергей_lab01_БПМ_19_2.md
prj.labs/lab02/: lab02.cpp  lab02.report.md  lab02.report.md.in.txt  Братчиков_Сергей_lab02_БПМ_19_2.md
prj.labs/lab03/: CMakeLists.txt  lab03.cpp  lab03.report.md  lab03.report.md.in.txt
prj.labs/lab04/: lab04.cpp  lab04.report.md  lab04.report.md.in.txt
prj.labs/lab05/: CMakeLists.txt  lab05.report.md.in.txt
